:sparkles: feat: Adicionado parte logica do componente

--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,15 +1,22 @@
 <div class="quizz__container">
     <div class="quizz_logo">
         <img src="assets/images/logo.png" alt="  ">
-        <h3>Titulo</h3>
+        <h3>{{title}}</h3>
     </div>
     <div class="quizz_questions">
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro eius in aspernatur ratione laborum quos et quas?</h3>
+        <h3>{{questionSelected.question}}</h3>
     </div>
-    <div class="quizz_options">
-        <button class="btn-option">OptionName</button>
+    <div *ngIf=!finished  class="quizz_options">
+        <button
+        *ngFor="let option of questionSelected.option; let i = index"
+        (click)="playerChoose(option.alias)"
+        class="btn-option"
+        >
+        {{option.name}}
+    </button>
     </div>
-    <div class="quizz_results">
+    <div *ngIf=finished class="quizz_results">
         <h1>O seu resultado é: </h1>
-    </div>
+        <p>{{answerSelected}}</p>
+        </div>
 </div>
